# ur_robot_viewer

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  test_magiclaw.ipynb  test_phone.ipynb  test_ur_robot.ipynb
config/: address.yaml
interface/: common.py  index.html  rerun_loader_urdf.py  server.py
interface/protobuf/: generate_pb.sh  robot.proto
interface/ur_description/: ur10e.urdf  ur5e.urdf
scripts/: record_robot.py  replay_robot.py  stream_robot.py
scripts/protobuf/: robot.proto  robot_pb2.py
ur_robot_viewer/: viewer.py
ur_teleop/: main.py
ur_teleop/devices/magiclaw/: __init__.py  magiclaw.py  phone.py
ur_teleop/devices/magiclaw/protobuf/: generate_pb.sh  magiclaw_msg.proto  phone_msg.proto
ur_teleop/devices/realsense_t265/: __init__.py  detect_devices.py  realsense_t265.py
ur_teleop/devices/ur5e/: __init__.py  controller.py
